--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "private": true,
   "engines": {
-  "node":"4.4.7"
+    "node": "4.4.7"
   },
   "devDependencies": {
-    "jake": "^8.0.12"
+    "jake": "^8.0.12",
+    "semver": "^5.2.0"
   }
 }
